exports[`Animated tests animate correctly by animateTo 1`] = `
<View
  style={
    Object {
      "height": 2,
      "width": 1,
    }
  } />
`;

exports[`Animated tests animate correctly by props change 1`] = `
<View
  style={
    Object {
      "height": 2,
      "width": 1,
    }
  } />
`;

exports[`Animated tests renders 1 animated.view component 1`] = `
<View
  style={Object {}} />
`;

exports[`Animated tests renders children when passed in 1`] = `
<View
  style={Object {}}>
  <View />
</View>
`;

exports[`Animated tests renders onPress to be called 1`] = `
<View
  onPress={[Function]}
  style={Object {}} />
`;

exports[`test renders correctly 1`] = `
<View
  style={Object {}} />
`;
